## configure.in
## Made by nicuveo for mml



## Configuration
profile: release
sub-dirs: check tools
prefix: /usr/local


## Defaults
CC	  = g++
CFLAGS	  = -std=c++11 -W -Wall -Wextra -pedantic -I include
DFLAGS    = -O0 -g3 -ggdb3 -DDEBUG -DMML_STATIC_CHECKING
RFLAGS    = -O3 -DNDEBUG
LDFLAGS   =
TARGETS   =

CFIL =


## Debug
[debug]
	CFLAGS  += $(DFLAGS) -pg
	LDFLAGS += -pg

## Check
[check]
	CFLAGS  += $(DFLAGS) -Werror

## Profiling
[profiling]
	CFLAGS  += -g3 -ggdb3 -O2

## Release
[release]
	CFLAGS += $(RFLAGS)
