## configure.in
## Made by nicuveo for mml

ANALYSE_OPTS = -o "-I ../include"
COVERAGE_OPTS = -t mml -o "--no-branch-coverage"
COVERAGE_OUT = ../doc/coverage

TESTS =                                 \
  compil                                \
  point                                 \
  line                                  \
  rect                                  \
  empty                                 \
  shape                                 \
  circle                                \
  polygon                               \
  contains                              \
  overlaps                              \
  tiling                                \
  perlin                                \
  grid                                  \
  hash                                  \
  extra                                 \
  tiling_ratios                         \

CFIL =                                         \
  ../include/nauths/mml/algos.hh	       \
  ../include/nauths/mml/algos/common.hh        \
  ../include/nauths/mml/algos/common.hxx       \
  ../include/nauths/mml/algos/contains.hh      \
  ../include/nauths/mml/algos/contains.hxx     \
  ../include/nauths/mml/algos/overlaps.hh      \
  ../include/nauths/mml/algos/overlaps.hxx     \
  ../include/nauths/mml/constants.hh	       \
  ../include/nauths/mml/io.hh		       \
  ../include/nauths/mml/io/ostream.hh	       \
  ../include/nauths/mml/io/ostream.hxx	       \
  ../include/nauths/mml/lib/dual_iterator.hh   \
  ../include/nauths/mml/lib/misc.hh	       \
  ../include/nauths/mml/lib/operators.hh       \
  ../include/nauths/mml/lib/real.hh	       \
  ../include/nauths/mml/lib/template.hh        \
  ../include/nauths/mml/lib/utils.hh	       \
  ../include/nauths/mml/mml.hh		       \
  ../include/nauths/mml/shapes.hh	       \
  ../include/nauths/mml/shapes/circle.hh       \
  ../include/nauths/mml/shapes/circle.hxx      \
  ../include/nauths/mml/shapes/empty.hh        \
  ../include/nauths/mml/shapes/hash.hh	       \
  ../include/nauths/mml/shapes/hash.hxx        \
  ../include/nauths/mml/shapes/line.hh	       \
  ../include/nauths/mml/shapes/line.hxx        \
  ../include/nauths/mml/shapes/point.hh        \
  ../include/nauths/mml/shapes/point.hxx       \
  ../include/nauths/mml/shapes/polygon.hh      \
  ../include/nauths/mml/shapes/polygon.hxx     \
  ../include/nauths/mml/shapes/rect.hh	       \
  ../include/nauths/mml/shapes/rect.hxx        \
  ../include/nauths/mml/shapes/shape.hh        \
  ../include/nauths/mml/shapes/shape.hxx       \
  ../include/nauths/mml/shapes/shape_base.hh   \
  ../include/nauths/mml/shapes/shape_base.hxx  \
  ../include/nauths/mml/shapes/shape_macros.hh \
  ../include/nauths/mml/shapes/shape_type.hh   \
  ../include/nauths/mml/shapes/shape_union.hh  \
  ../include/nauths/mml/shapes/shape_utils.hh  \
  ../include/nauths/mml/tools.hh	       \
  ../include/nauths/mml/tools/grid.hh	       \
  ../include/nauths/mml/tools/grid.hxx	       \
  ../include/nauths/mml/tools/perlin.hh        \
  ../include/nauths/mml/tools/perlin.hxx       \
  ../include/nauths/mml/tools/tiling.hh        \
  ../include/nauths/mml/tools/tiling.hxx       \
  ../include/nauths/mml/types.hh               \
